                           _     _           _       
                          | |   (_)_ __   __| | __ _ 
                          | |   | | '_ \ / _` |/ _` |
                          | |___| | | | | (_| | (_| |
                          |_____|_|_| |_|\__,_|\__,_|
                       http://service-technology.org/linda



Version 0.6-unreleased
======================

* Added an option for output file creation.

\nSee file ChangeLog <http://service-technology.org/files/linda/ChangeLog> for\ncomplete version history.\n