@@ -23,7 +23,7 @@ AC_CONFIG_TESTDIR(tests)
 # needed for the Petri Net API
 AC_DEFINE_UNQUOTED(CONFIG_PETRIFY, "not found", [Petrify is not used.])
 
-#AC_HEADER_ASSERT
+AC_HEADER_ASSERT
 
 # check for dlopen/ftime (required by lp_solve)
 AC_SEARCH_LIBS([dlopen], [dl zrldsrl])
@@ -36,18 +36,13 @@ AM_CONDITIONAL(COMPILE_PNAPI, [test "${ac_cv_lib_pnapi_main}" = "no"])
 # check for functions
 AC_CHECK_FUNCS([popen pclose],,AC_MSG_WARN([cannot use popen or pclose]))
 
-# check for exact unsigned types
-#AC_TYPE_UINT8_T
-#AC_TYPE_UINT16_T
-#AC_TYPE_UINT32_T
-
 AC_CONFIG_FILES([Makefile 
-				libs/pnapi/Makefile 
-				libs/lp_solve/Makefile 
-				src/Makefile 
-				doc/Makefile 
-				man/Makefile
-				maintainer/Makefile 
+		libs/pnapi/Makefile 
+		libs/lp_solve/Makefile 
+		src/Makefile 
+		doc/Makefile 
+		man/Makefile
+		maintainer/Makefile 
                 maintainer/macports/Portfile
-				tests/Makefile tests/package.m4])
+		tests/Makefile tests/package.m4])
 AC_OUTPUT
