@@ -12,4 +12,7 @@ Version 0.6-unreleased
 
 * Added an option for output file creation.
 
-\nSee file ChangeLog <http://service-technology.org/files/linda/ChangeLog> for\ncomplete version history.\n
+
+See file ChangeLog <http://service-technology.org/files/linda/ChangeLog> for
+complete version history.
+
